help button, footer overlaps content, needs fix

--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,36 @@ table {
 form {
 	background-color: rgb(255, 255, 255);
 	width: 40%;
-  	margin: 0 auto;
+  margin: 0 auto;
 	display: block;
-    text-align: center;
+  text-align: center;
 }
+
+
+.instructions {
+  display: inline-block;
+  text-align: left;
+  font-family: sans-serif;
+  font-weight: normal;
+  width: 40%;
+  padding-bottom: 2.5rem;
+}
+
+.instructions li {
+  list-style: disc;
+  padding: 1px 0rem;
+  line-height: 0px;
+  list-style-position: inside;
+}
+
+.instructions b {
+  padding: 1px 0rem;
+}
+
+.instructions p {
+  padding: 1px 0rem;
+}
+
 
 /* ===================================================================================== */
 /* Buttons */
@@ -140,6 +166,39 @@ form {
     transition: box-shadow .2s;
 }
 
+#footer-share-button {
+  background-color: initial;
+  background-image: linear-gradient(-180deg, grey, grey);
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Inter,-apple-system,system-ui,Roboto,"Helvetica Neue",Arial,sans-serif;
+  font-weight: bold;
+  height: 20px;
+  line-height: 20px;
+  outline: 0;
+  overflow: hidden;
+  padding: 0 5px;
+  pointer-events: auto;
+  position: relative;
+  text-align: center;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: center;
+  white-space: nowrap;
+  z-index: 1;
+  border: 0;
+  transition: box-shadow .2s;
+}
+
+#footer-share-button:hover {
+  box-shadow: rgba(129, 129, 129, 0.678) 0 3px 8px;
+}
+
+
 /* ===================================================================================== */
 /* Inputs */
 /* ===================================================================================== */
@@ -175,6 +234,10 @@ input[type='checkbox']:checked {
 }
 
 
+/* ===================================================================================== */
+/* Terms of Service */
+/* ===================================================================================== */
+
 .tos-body {
 	text-align: left;
 }
@@ -202,6 +265,9 @@ input[type='checkbox']:checked {
 
 
 
+/* ===================================================================================== */
+/* Footer */
+/* ===================================================================================== */
 
 * {
   padding: 0;
@@ -209,15 +275,18 @@ input[type='checkbox']:checked {
 }
 
 footer {
-  background-color: rgba(58, 95, 150, 0.756);
+  background-color: #3c8eb1;
   color: white;
   display: flex;
   flex-direction: column;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .about {
   flex-grow: 1;
-  flex-basis: 100%;
+  flex-basis: 70%;
 }
 
 .tos-footer {
@@ -247,21 +316,50 @@ footer {
   font-size: 22px;
 }
 
+.container h3 a{
+  color: white;
+  text-decoration: none;
+}
+
+.container h3 a:hover{
+  color: white;
+  transition: 0.3s ease-out;
+  text-decoration: underline;
+}
+
 .container a{
   color: white;
-  text-decoration: underline;
+  text-decoration: none;
   margin-bottom: 0.5rem;
 }
 
 .container a:hover {
-  color: rgb(123, 0, 255);
+  color: white;
   transition: 0.3s ease-out;
+  text-decoration: underline;
+}
+
+.copyright a{
+  color: white;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
+}
+
+.copyright a:hover {
+  color: white;
+  transition: 0.3s ease-out;
+  text-decoration: underline;
+
 }
 
 .copyright {
   padding: 15px 0;
   text-align: center;
   border-top: 1px solid darkgrey
+}
+
+#share-alert {
+  color: rgb(0, 0, 0);
 }
 
 @media only screen and (max-width: 768px) {
